# CardCalc

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Card.cpp  Card.h  CardGroup.cpp  CardGroup.h  README.md  calculator.cpp  calculator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
test/: CMakeLists.txt  CalculatorTest.cpp
